# penrose-panels

./: .gitignore  pyproject.toml
scripts/: generate_tilings.py
src/penrose_panels/: geometry.py  image.py  penrose.py  tiling.py
tests/: test_geometry.py  test_penrose.py  test_readback.py
