[project]
name = "penrose-panels"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Frank Sodari", email = "franksodari@gmail.com" }]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
penrose-panels = "penrose_panels:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
