[project]
name = "penrose-panels"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Frank Sodari", email = "franksodari@gmail.com" }]
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3",
]
requires-python = ">=3.12"
dependencies = [
    "cairosvg>=2.7.1",
    "numpy>=2.2.1",
    "scipy>=1.15.1",
]

[tool.hatch.version]
path = "src/penrose_panels/__about__.py"

[project.scripts]
penrose-panels = "penrose_panels:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "matplotlib>=3.10.0",
    "pytest>=8.3.4",
    "seaborn>=0.13.2",
]
